--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,107 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+html {
+  background-color: rgb(245, 245, 245)
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: linear-gradient(rgb(88, 126, 159), 30%, rgb(57, 96, 151), 40%, rgb(245, 245, 245) 39.9%, rgb(245, 245, 245) 100%);
+  height: 100vh;
+}
+
+.content {
+  height: 90vh;
+  min-height: 676px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 0 15%;
+  margin-bottom: 2vh;
+}
+
+.content-picture img {
+  height: 480px;
+  margin-top: 120px;
+}
+
+.content-text {
+  display: flex;
+  flex-direction: column;
+}
+
+.header-div {
+  box-sizing: content-box;
+  width: 504px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-div a {
+  padding: 0 7px 0 5px;
+}
+
+.login-btn {
+  width: 90px;
+  height: 35px;
+  background: linear-gradient(rgb(110, 146, 174), rgb(73, 116, 151));
+  border: 1px solid rgb(61, 102, 135);
+  border-radius: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  color: white;
+  font-weight: 500;
+}
+
+.login-btn-a {
+  text-decoration: none;
+}
+
+.content-text-description {
+  background-image: url('../images/frame.png');
+  background-repeat: no-repeat;
+  width: 500px;
+  height: 284px;
+  box-sizing: content-box;
+}
+
+.content-text-description h2 {
+  color: #06365f;
+  padding: 10px 10px 0 40px;
+  width: 50%;
+}
+
+.content-text-description p {
+  padding: 0 30px 0 40px;
+  line-height: 1.5rem;
+}
+
+.store-btns {
+  width: 400px;
+  margin-left: 10px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.footer {
+  background: rgb(245, 245, 245);
+}
+
+.footer ul{
+  margin: 0 25%;
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+}
+
+.footer ul a {
+  font-weight: 500;
+  text-decoration: none;
+  color: #1c5380;
+  margin: 0 10px;
+  flex-grow: 1;
 }
