--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,88 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+/* content of the page */
+.full-wrapper {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1px 100px;
+  margin: 98px 0;
+}
+
+.images-box {
+  display: flex;
+  margin: 20px 35px;
+  width: 54%;
+  justify-content: space-between;
+}
+.image-box img {
+  padding-right: 20px;
+}
+.col {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  justify-content: center;
+  align-content: center;
+}
+/* logos and sign in button */
+.logos {
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
+  padding: 0 20px;
+}
+#instagram-brand {
+  height: 75px;
+}
+.logos button {
+  background-color: #1c5380;
+  border: 3px solid #06365f;
+  width: 109px;
+  height: 46px;
+  margin: 14px 0 0 57px;
+  -webkit-box-shadow: 0px 2px 5px 0px rgba(6, 54, 95, 1);
+  -moz-box-shadow: 0px 2px 5px 0px rgba(6, 54, 95, 1);
+  box-shadow: 0px 2px 5px 0px rgba(6, 54, 95, 1);
+  border-radius: 5px 5px 5px 5px;
+}
+button > a {
+  text-decoration: none;
+  color: white;
+  font-size: 18px;
+  padding: 0px 4px;
+  font-weight: 600;
+  text-align: center;
+}
+/* content box */
+
+.full-content {
+  width: 68%;
+  background-image: url(../images/frame.png);
+  padding: 0px 35px;
+  background-repeat: no-repeat;
+  color: #06365f;
+}
+
+/* bottom Nav and footer elements */
+ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  list-style-type: none;
+}
+ul li > a {
+  text-decoration: none;
+  padding: 0 10px;
+  font-weight: 700;
+  color: #06365f;
+}
+
+footer {
+  margin: 70px 0;
 }
