--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -64,14 +64,12 @@ button {
   align-items: center;
   justify-content: center;
   margin-top: 1em;
-  background-image: url(../images/bgtile.png);
-  background-repeat: repeat;
+  background-image: linear-gradient(#8db8db, #1c5380);
   height: 50px;
-  width: 150px;
+  width: 130px;
   color: white;
   border-radius: 5px;
   font-size: 20px;
-  box-shadow: #1c5380;
   border-color: #1c5380;
 }
 
