--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,140 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+.clearfix {
+  clear: both;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+figure {
+  height: fit-content;
+  width: fit-content;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+
+}
+
+#blue-part {
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat;
+  height: 50vh;
+}
+
+/* ----- MAIN CONTENT ----- */
+#content-container {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  top: 115px;
+  height: 100vh;
+  width: 100vw;
+  max-width: 100%;
+}
+
+#right-container {
+  margin: 0 0 0 60px;
+}
+
+#top-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+
+  height: fit-content;
+  width: 500px;
+}
+
+#login-button {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  align-items: center;
+
+  padding: 5px;
+  width: 100px;
+  height: 40px;
+  background-image: url("../images/bgtile.png");
+  border: 0.5px solid #06365f;
+  border-radius: 3px;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  box-shadow: 0px 0px 2px #06365f;
+}
+
+#frame-container {
+  position: relative;
+  justify-self: flex-end;
+  margin-top: 20px;
+  width: 505px;
+  height: 420px;
+
+  display: flex;
+  flex-flow: wrap;
+}
+
+
+#frame-text {
+  position: absolute;
+  padding: 30px 50px 0 40px;
+}
+
+#frame-text h1 {
+  font-family: 'Source Sans Pro';
+  color: #06365f;
+  font-size: 1.9rem;
+  line-height: 1.2em;
+  margin-bottom: 18px;
+  font-style: black;
+}
+
+#frame-text p {
+  font-size: 0.95rem;
+}
+
+.store-buttons {
+  position: relative;
+  align-self: flex-end;
+  margin: 0 10px;
+  left: 27px;
+}
+
+#white-part {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  flex-flow: row wrap;
+
+  background-color: #f4f5f7;
+  height: 82vh;
+}
+
+#white-part ul {
+  list-style: none;
+  margin-bottom: 50px;
+}
+
+ul li {
+  font-size: 0.8em;
+  font-weight: bold;
+  display: inline;
+  margin: 0 10px;
+}
+
+ul a {
+  text-decoration: none;
+  color: #06365f;
+}
+
+#instagram-copy {
+  color: #999;
 }
