--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,117 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Open Sans', sans-serif;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+.all-box {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  margin: 100px 120px 0 120px;
+  /* border: 2px solid red; */
+}
+
+.phone-size {
+  height: 550px;
+}
+.second-box {
+  display: flex;
+  flex-direction: column;
+  margin-left: 60px;
+  margin-top: 10px;
+  /* border: 2px solid green; */
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+  margin-left: 6px;
+  margin-right: 8px;
+  /* border: 2px solid purple; */
+}
+
+.navbar img {
+  height: 70px;
+  width: auto;
+  /* border: 2px solid pink; */
+}
+
+.log-in {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  justify-content: space-around;
+  color: white;
+  border: 2px solid #06365f;
+  border-radius: 3px;
+  background-color: #1c5380;
+  height: 50%;
+  width: 14%;
+  padding: 0 5px;
+}
+.log-in img {
+  height: 18px;
+  width: auto;
+  /* border: 2px solid white; */
+  /* margin-right: 5px; */
+}
+.log-in p {
+  /* margin-bottom: 20px; */
+  /* border: 2px solid black; */
+  font-size: 14px;
+}
+
+.text-and-banners {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  /* border: 2px solid orange; */
+  padding: 20px;
+}
+
+.text-and-banners h1 {
+  font-size: 28px;
+  color: #1c5380;
+  width: 54%;
+  margin: 15px 0 20px 25px;
+}
+
+.text-and-banners p {
+  margin: 0 40px 0 25px;
+  line-height: 33px;
+  padding-bottom: 10px;
+  font-size: 15px;
+}
+
+.left-margin {
+  margin: 25px 15px 0 25px;
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 20px
+}
+li {
+  list-style-type: none;
+  padding: 10px 10px 90px;
+  font-size: 12px;
+  color: #1c5380;
+  font-weight: 700;
+}
+.transparent {
+  color: lightgrey;
 }
