--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,91 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.blue-container{
+  background-color: #06365f;
+  height: 24vw;
+  padding-left: 50%;
+}
+
+.blue-content{
+  padding-top: 150px;
+}
+
+.blue-content .logo{
+  padding-right: 100px;
+  
+}
+
+button{
+  background-color: #1c5380;
+  border-color: #1c5380;
+  padding: 5px 15px;
+  color: #fff;
+  border-radius: 3px;
+  position: absolute;
+  top: 170px;
+  right: 310px; 
+  padding-bottom: 10px;
+  font-size: 15px;
+  color: #d5dbe5
+
+}
+button img{
+  padding-right: 10px;
+  position: relative;
+  top: 5px;
+  vertical-align: center;
+}
+.white-contianer{
+  background-color: #fff;
+  margin-bottom: 100px;
+}
+
+.content-container{
+  background: url("../images/frame.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 35%;
+  float: right;
+  margin-right: 20%;
+  margin-top: -80px;
+}
+h2{
+  color: #06365f;
+}
+.content{
+  padding: 40px;
+}
+
+.button-container{
+  padding: 10px 30px 0;
+}
+
+.button-container .android{
+float: right;
+}
+
+.phone{
+  position: relative;
+  margin-left: 20%;
+  margin-top: -150px;
+}
+
+footer a{
+  text-decoration: none;
+  padding: 0 10px;
+  color: #1c5380;
+
+}
+
+footer{
+  text-align: center;
+  /* margin-bottom: 100px; */
+  margin-top: -50px;
+  font-weight: bold;
+}
+
+.logo{
+  margin-left: -70px;
+}
