--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,82 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+header{
+  background-image:linear-gradient(to bottom,#06365f,#1c5380);
+  height:500px;
+}
+.login{
+  background-image:linear-gradient(to top,#06365f,#1c5380);
+  width:110px;
+  height:50px;
+  display: inline-block;
+  position:relative;
+  left:80px;
+  top:-20px;
+  border-width:1px;
+  border-radius:4px;
+  box-shadow:4px;
+}
+
+#brand-img{
+  padding-left: 700px;
+  padding-top:250px;
+}
+#home-img{
+  padding-top:12px;
+  padding-left:7px;
+  position: absolute;
+  top:5px;
+}
+.login button{
+  color:white;
+  background-color: transparent;
+  position:relative;
+  top:-5px;
+  border-style:none;
+  font-size:20px;
+  position: absolute;
+  left:35px;
+  top:15px;
+}
+#phone{
+  height:700px;
+  position:relative;
+  left:100px;
+  top:-250px;
+}
+.div-box{
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  width:600px;
+  height:600px;
+  float:right;
+  position:absolute;
+  top:400px;
+  left:700px;
+  padding-left:30px;
+}
+.div-h1{
+  font-size:30px;
+  width:60%;
+  color:#1c5380;
+}
+.div-p{
+  width:60%;
+}
+.foot{
+  height:100px;
+  text-align:center;
+  position:absolute;
+  top:1100px;
+  left:450px;
+}
+span{
+  font-weight:bold;
+  color:#1c5380;
+  word-spacing:10px;
+}
+
+.sec1{
+  height:200px;
+}
