--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,148 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.container{ 
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x; 
+  width: 100%;
+  height: auto;
+  float:left;
+  margin: 0px 0px 0px 0px;
+}
+
+.wrapper{
+  /* background: red; */
+  width: 1000px;
+  height: 800px;
+  margin: 100px auto 0px auto;
+}
+
+.left-side{
+  /* background: green; */
+  width: 318px;
+  float: left;
+  margin: 0px 0px 0px 0px;
+}
+
+.right-side{
+  /* background: blue; */
+  width: 600px;
+  float: right;
+  margin: 0px;
+}
+
+.title-head{
+  /* background: blueviolet; */
+  width: 100%;
+  float: left;
+  margin: 0px;
+}
+
+.title-head img{
+  float: left;
+}
+
+.title-head button{
+  /* background: #688eab; */
+  background: linear-gradient(to bottom, #6d93ae 0%,#497697 100%);
+  width: 100px;
+  height: 44px;
+  float: right;
+  margin: 10px 0px 0px 10px;
+  border: 1px solid #346183;
+  border-radius:  5px;
+  color: white;
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.text-body{
+  background: white;
+  width: 100%;
+  height: auto;
+  float: left;
+  margin: 10px 0px 0px 0px;
+  border-radius: 5px;
+  box-shadow: 0px -2px 17px -12px rgba(0,0,0,0.75);
+}
+
+.header-title{
+  color: #688eab;
+  /* background: red; */
+  padding: 0px 0px 0px 30px;
+}
+
+.text-body p{
+  /* background: blue; */
+  padding: 0px 0px 0px 30px;
+}
+
+.mobile-app{
+  /* background:purple; */
+  width: 100%;
+  height: auto;
+  float: left;
+}
+
+.mobile-app ul{
+  /* background: yellow; */
+  width: 80%;
+  padding: 0px 0px 0px 30px;
+  float: left;
+}
+
+.mobile-app ul li{
+  /* background: red; */
+  width:  170px;
+  height: 50px;
+  padding: 0px 0px 0px 0px;
+  margin: 0px 0px 0px 0px;
+  float: left;
+  list-style: none;
+}
+
+.mobile-app ul li:last-of-type{
+  margin-left: 40px;
+}
+
+.mobile-app ul li p{
+  display: none;
+  padding: none;
+
+}
+
+footer{
+  /* background: yellow;  */
+  width: 100%;
+  float: left;
+  margin:  50px 0px 0px 0px;
+}
+
+footer ul{
+  background: green;
+  width: 600px;
+  margin: 0px auto;
+}
+
+footer ul li{
+  /* background: red; */
+  height: 25px;
+  float: left;
+  margin: 0px 0px 0px 10px;
+  padding: 0px;
+  list-style: none;
+}
+
+footer ul li a{
+  height: 25px;
+  color: #507b9c;
+  text-decoration: none;
+  font-size: 12px;
+  font-weight: 600;
+}
+
+footer ul li:last-of-type{
+  color: lightgrey;
+}
+
