--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,89 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  width: 1100px;
+}
+
+header {
+  /* background-color: #1c5380; */
+  background: rgb(63,114,156);
+  background: radial-gradient(circle, rgba(63,114,156,1) 0%, rgba(28,83,128,1) 100%);
+  height: 250px;
+}
+
+button {
+  /* background-color: #1c5380; */
+  background: rgb(63,114,156);
+  background: radial-gradient(circle, rgba(63,114,156,1) 0%, rgba(28,83,128,1) 100%);
+  border-color: rgb(6,54,95,0.8);
+  color: rgba(255,255,255,.8);
+  float: right;
+  padding: 6px;
+  margin: 15px 0;
+}
+
+#home-icon {
+  padding: 0 0;
+}
+
+.login-button-text {
+  position: relative;
+  bottom: 5px;
+  font-weight: bold;
+}
+
+h2 {
+  color: #06365f;
+  width: 256px;
+}
+
+
+
+.header-content {
+  position: relative;
+  left: 500px;
+  top: 100px;
+  width: 499px;
+}
+
+.section {
+}
+
+.iphone-img {
+  position: relative;
+  left: 80px;
+  bottom: 185px;
+}
+
+.tile {
+  position: relative;
+  left: 500px;
+  bottom: 585px;
+  width: 383px;
+}
+
+.tile-content {
+  position: relative;
+  left: 50px;
+  bottom: 270px;
+}
+
+.footer {
+  position: relative;
+  left: 250px;
+  bottom: 800px;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+a {
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 0 5px;
+  color: #1c5380;
+}
+
+#copyright {
+  color: lightgray;
+  padding: 0 0 0 20px;
 }
