--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,74 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.container {
+  width: 90%;
+  margin: 0 auto;
+  /* background-color: #1c5380; */
+}
+
+.topBlueSection {
+  /* background-color: #06365f; */
+  background-color: #1c5380;
+
+  height: 200px;
+  padding-top: 80px;
+  padding-left: 190px;
+}
+img.top {
+   
+  vertical-align: text-top; 
+}
+.topBlueSection div {
+  
+  margin: 15px;
+  display: inline;
+}
+
+.theframe {
+  
+  width: 400px;
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+
+  position: relative;
+  left: 550px;
+  top: -100px;
+
+  padding: 25px;
+}
+
+.wrapper-badge {
+  float: left;
+}
+.footter {
+  position: relative;
+  top: 150px;
+}
+ul > li {
+  float: left;
+  list-style: none;
+  margin: 10px;
+  font-size: 0.75em;
+  color: #06365f;
+}
+
+.loginButton {
+  width: 50px;
+  background-color: #06365f;
+  color: white;
+
+}
+/* clearfix hack */
+.group::before,
+.group::after {
+  content: "";
+  display: table;
+}
+.group::after {
+  clear: both;
+}
+.group {
+  *zoom: 1;
+}
