--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,80 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+}
+.top{
+background-color: #1c5380;
+height: 350px;
+margin-top: 0;
+}
+.logo{
+  position: relative;
+  left: 600px;
+  top: 150px;
+}
+.log-in{
+  color: white;
+  size: 100px;
+  position: relative;
+  top: 85px;
+  left: 1000px;
+}
+.log-in img{
+  vertical-align: middle;
+}
+.log-in button{
+  background-color: #1c5380;
+  color: white;
+  height: 40px;
+  border: 1px #06365f solid;
+}
+.two-phones{
+  position: absolute;
+  left: 220px;
+  top: 125px;
+}
+.description{
+  background-image: url("../images/frame.png");
+  position: absolute;
+  top: 250px;
+  left: 600px;
+  background-repeat: no-repeat;
+  height: 600px;
+}
+.description h2{
+  color: #06365f;
+  text-align: left;
+  padding-left: 40px;
+  padding-right: 390px;
+}
+.description p{
+  padding-left: 40px;
+  padding-right: 250px;
+}
+.iphone{
+  position: relative;
+  top: 235px;
+  left: 635px;
+}
+.android{
+  position: relative;
+  top: 178px;
+  left: 825px;
+}
+.foot{
+  position: relative;
+  bottom: -225px;
+  margin: 0 23%;
+  
+}
+.foot a{
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: bolder;
+  margin: 0 10px;
 }
