--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -17,28 +17,82 @@ body {
 }
 
 .wrapper {
-  background: red;
   width: 1000px;
   margin: 50px auto 0 auto;
 }
 
 .right {
-  background: green;
   width: 500px;
   float: right;
   margin: 0px;
 }
 
+.header {
+background: transparent;
+width: 600px;
+margin: 0 auto;
+margin-top: 30px;
+}
+
+.phones {
+  padding-top: 40px;
+  padding-left: 40px;
+}
+
+.log-in {
+ margin-left: 50px;
+ padding: 5px 10px;
+ margin-bottom: 10px;
+ background-color: transparent;
+}
+
+.main {
+  background-image: url(../images/frame.png);
+  background-size: cover;
+}
+
+.description-title {
+  color: #06365f;
+  font-size: 30px;
+  text-align: left;
+  width: 400px;
+  padding-left: 40px;
+  padding-top: 20px;
+}
+
+.main p {
+  width: 85%;
+  padding-left: 40px;
+}
+
+.app-store {
+  padding-left: 40px;
+  padding-right: 30px;
+  padding-top: 25px;
+}
+
 .left {
-  background: red;
   width: 318px;
   float: left;
   margin: 0;
 }
 
 .bottom {
-  background: blue;
   width: 100%;
   float: left;
-  margin: 0;
+  margin: 0 auto;
+}
+
+.bottom-links{
+  list-style: none;
+}
+
+.bottom-links li{
+  float: left;
+  padding: 20px;
+  margin-top: 200px;
+}
+
+#copyright {
+  color: darkgray;
 }
