--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,78 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+    font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
+    background-image: url(../images/bgtile.png);
+    background-repeat: repeat-x;
+}
+
+#logo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#logo #brand {
+    width: 250px;
+}
+
+.section1 {
+    display: flex;
+    margin-top: 100px;
+}
+
+#informacoes {
+    width: 500px;
+}
+
+button {
+    background: #4f7ea5;
+    border: 1px solid #1c5380;
+    border-radius: 2px;
+    color: white;
+    height: 40px;
+    width: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: bold;
+}
+
+#phone {
+    margin-right: 100px;
+    margin-left: 100px;
+}
+
+#title1 {
+    background-image: url(../images/frame.png);
+    background-repeat: no-repeat;
+    padding: 20px 40px;
+}
+
+#title1 h1 {
+    color: #1c5380;
+
+}
+
+
+footer ul {
+    text-align: center;
+}
+
+footer ul li {
+    display: inline-block;
+    padding: 0 10px;
+}
+
+footer ul li a {
+    color: #1c5380;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: bold;
+
+}
+
+#footer-gray {
+    color: rgba(128, 128, 128, 0.589);
+
 }
