--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -2,9 +2,85 @@
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
+font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
 */
 
+/* BACKGROUND */
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.background-blue {
+  background-color: #436b8f;
+  top: 0;
+  width: 100%;
+  height: 300px;
+  position: absolute;
+  z-index: -1;
+}
+
+#main-container {
+  display: flex;
+  justify-content: space-around;
+  margin: 120px auto;
+  /* background: red; */
+  height: 625px;
+  width: 84%;
+}
+
+.phone {
+  display: block;
+  align-self: flex-start;
+}
+
+/* IG LOGO AND LOGIN */
+
+.right-side {
+  width: 41%;
+  margin-top: 26px;
+}
+
+#instagram-logo-login {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 10px;
+}
+
+.button {
+  align-self: center;
+  margin: 10px 0px 0px 70px;
+  background: #436b8f;
+  border: none;
+  color: white;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+/* INFO */
+.info {
+  background: url(../images/frame.png);
+  background-size: cover;
+  padding: 13px 27px 0px;
+}
+
+h2 {
+  font-family: Arial, Helvetica, sans-serif;
+  color: #06365f;
+}
+
+p {
+  line-height: 1.5rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* FOOTER */
+.footer {
+  color: #436b8f;
+  display: flex;
+  justify-content: space-around;
+  width: 484px;
+  margin: 0px auto;
+}
+
+.nav {
+  width: 50%;
 }
