--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,87 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+header {
+  background-image: url("../images/bgtile.png");
+  height: 300px;
+}
+
+h1 {
+  color: #06365f;
+  padding-right: 30%;
+}
+
+.thebox {
+  height: 550px;
+  width 80%;
+  margin-top: -180px;
+}
+
+.phones {
+  position: relative;
+  top: 10px;
+  left: 200px;
+  float: left;
+}
+.totheright {
+  float: right;
+  height: 550px;
+  width 50%;
+}
+
+.instagram-login {
+  position: absolute;
+  top: 150px;
+  left: 575px;
+  display: inline;  
+}
+  .logo {
+    float: left;
+  }
+  .home-login {
+    float: right;
+  }
+    .home {
+      float: left;
+    }
+    .login {
+      color: #1c5380;e;
+      float: right;
+    }
+
+.capture-moments {
+  font-size: medium; 
+  word-wrap: break-word;
+  position: absolute;
+  top: 250px;
+  left: 575px;
+  background-color: white;
+  height: 395px;
+  width: 525px; 
+  border: 1px solid grey;
+  padding: 0px 25px 0px 25px;
+  border-radius: 100px
+  box-shadow: 10px 10px 5px 5px #888888
+}
+  .get-buttons {
+    float: left;
+  }
+    .get-app {
+      float: left;
+    }
+    .get-play {
+      float: right;
+    }
+
+nav {
+  position: absolute;
+  bottom: 150px;
+  left: 300px;
+}
+nav li {
+  list-style-type: none;
+  display: inline;
+  margin-left: 20px;
+  color: #06365f;
+}
